Changed text from pknight

--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-10 visible-xs">
-                    <p>SIMS has participated in various activations around the world since 2011. An interactive map of all activations is available when viewing the website on a larger screen.</p>
-                    <p>In the meantime you can download a table for all activations below.</p>
+                    <p>Information Management has been part of disaster response operations (deployed and remote) since 2011. An interactive map of all activations is available when viewing the website on a larger screen.</p>
+                    <p>You can download a table for all activations below.</p>
                 </div>
                 <p><strong>Summary of Activations</strong></p>
                 <p>
