Changed background colour to be white by default

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       Please check out <a href="http://browsehappy.com/">Browse Happy</a> to get the lastest versions of major browsers.</h4></div>
     <![endif]-->
     <!-- Header -->
-    <header id="top" class="header intro bg-white">
+    <header id="top" class="header intro">
         <div class="text-vertical-center">
             <h1 class="front-page-font-outline">SIMS</h1>
             <h3 class="front-page-font-outline">Surge Information Management Support</h3>
@@ -79,7 +79,7 @@
     </header>
 
     <!-- About -->
-    <section id="about" class="about bg-white">
+    <section id="about" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -101,7 +101,7 @@
     </section>
 
     <!-- External Resources -->
-    <section id="internal-resources" class="external-resources">
+    <section id="internal-resources" class="external-resources bg-black">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -224,7 +224,7 @@
     <div class="section-spacer"></div>
 
     <!-- Gallery -->
-    <section id="gallery" class="gallery bg-white">
+    <section id="gallery" class="gallery">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -242,7 +242,7 @@
     </section>
 
     <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-    <div id="blueimp-gallery" class="blueimp-gallery bg-white">
+    <div id="blueimp-gallery" class="blueimp-gallery">
         <div class="slides"></div>
         <h3 class="title"></h3>
         <a class="prev">‹</a>
@@ -252,10 +252,10 @@
         <ol class="indicator"></ol>
     </div>
 
-    <div class="section-spacer bg-white"></div>
+    <div class="section-spacer"></div>
 
     <!-- External Resources -->
-    <section id="external-resources" class="external-resources">
+    <section id="external-resources" class="external-resources bg-black">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -401,10 +401,10 @@
         <!-- /.container -->
     </section>
 
-    <div class="section-spacer"></div>
+    <div class="section-spacer bg-black"></div>
 
     <!-- About -->
-    <section id="toolkit" class="toolkit bg-white">
+    <section id="toolkit" class="toolkit">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -412,7 +412,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <div class="error-message-toolkit"><p><i>Sorry, somthing went wrong loading this resource. Please refresh the page. If the problem persists, send an email to <a href="mailto:daniel.joseph@redcross.org">email</a> with the name and version of the internet browser you are using. Thank you.</i></p></div>
-                    <div data-toolkitpath="toolkit" class="toolkit-block bg-white">
+                    <div data-toolkitpath="toolkit" class="toolkit-block">
                         <div class="contents"></div>
                         <!-- ### folders and file links go here ### -->
                     </div>
@@ -423,10 +423,10 @@
         <!-- /.container -->
     </section>
 
-    <div class="section-spacer bg-white"></div>
+    <div class="section-spacer"></div>
 
     <!-- Dashboard  -->
-    <section id="dashboard" class="bg-white">
+    <section id="dashboard">
         <div class="container">
             <div class="col-lg-12 text-center">
                 <h2>SIMS Activations</h2>
@@ -464,10 +464,10 @@
             </div>
         </div>
     </section>
-    <div class="section-spacer bg-white"></div>
+    <div class="section-spacerk"></div>
 
     <!-- Contact  -->
-    <section id="feedback" class="feedback">
+    <section id="feedback" class="feedback bg-black">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -488,8 +488,8 @@
 
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
+    <footer class="bg-black">
+        <div class="container bg-black">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <p class="text-muted">CC-BY</p>
