--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Lato|Oxygen">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Lato">
     <link rel="stylesheet" href="css/stylish-portfolio.css">
     <link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/dc.css" />
@@ -100,7 +99,7 @@
         <!-- /.container -->
     </section>
 
-    <!-- External Resources -->
+    <!-- Internal Resources -->
     <section id="internal-resources" class="external-resources bg-black">
         <div class="container">
             <div class="row">
@@ -111,7 +110,7 @@
             <!-- <p class="lead text-center">Paragraph here</p> -->
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center internal-card-images">
                             <img class="internal-card-images" src="img/resources/onepager.png" />
@@ -126,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center  internal-card-images">
                             <img class="internal-card-images" src="img/resources/activation.png" />
@@ -141,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center internal-card-images">
                             <img class="internal-card-images" src="img/resources/tips.png" />
@@ -156,7 +155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center internal-card-images">
                             <img class="internal-card-images" src="img/resources/im.png" />
@@ -171,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center internal-card-images">
                             <img class="internal-card-images" src="img/resources/services.png" />
@@ -186,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center internal-card-images">
                             <img class="internal-card-images" src="img/resources/learning.png" />
@@ -201,7 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="card external-resource">
                         <div class="card-logo text-center internal-card-images">
                             <img class="internal-card-images" src="img/resources/cie.png" />
@@ -264,7 +263,7 @@
 
                     <div class="row">
                         <!-- COL 1-->
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
                                     <img class="external-card-images" src="img/logos/logo-osm.png" />
@@ -274,7 +273,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hot.png" />
@@ -284,7 +283,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-missingmaps.png" />
@@ -294,7 +293,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hresp.png" />
@@ -305,7 +304,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hdx.png" />
@@ -315,7 +314,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo dhn text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-dhn.png" />
@@ -325,7 +324,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-nethope.png" />
@@ -336,7 +335,7 @@
                             </div>
                         </div>
 
-                            <div class="col-sm-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <div class="card external-resource">
                                     <div class="card-logo hid text-center">
                                         <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hid.png" />
@@ -346,7 +345,7 @@
                                     </div>
                                 </div>
                             </div>
-                                <div class="col-sm-4">
+                                <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="card external-resource">
                                         <div class="card-logo text-center">
                                             <img class="external-card-images card-logo-fit-size" src="img/logos/logo-rw.png" />
@@ -359,7 +358,7 @@
 
                         <!-- COL 3-->
 
-                            <div class="col-sm-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <div class="card external-resource">
                                     <div class="card-logo text-center ">
                                         <img class="external-card-images card-logo-fit-size" src="img/logos/logo-sheltercluster.png" />
@@ -369,7 +368,7 @@
                                     </div>
                                 </div>
                             </div>
-                                <div class="col-sm-4">
+                                <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="card external-resource">
                                         <div class="card-logo text-center">
                                             <img class="external-card-images" src="img/logos/logo-acaps.png" />
@@ -379,7 +378,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-xs-12 col-sm-6 col-md-4">
                                         <div class="card external-resource">
                                             <div class="card-logo text-center">
                                                 <img class="external-card-images card-logo-fit-size" src="img/logos/logo-wb.png" />
