- Moved all javascript files to a vendor folder

--- a/index.html
+++ b/index.html
@@ -497,15 +497,17 @@
         </div>
     </footer>
 
-
+    <!-- Javascript libraries -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/d3.js"></script>
-    <script type="text/javascript" src="js/crossfilter.js"></script>
-    <script type="text/javascript" src="js/dc.js"></script>
-    <script type="text/javascript" src="js/fileSaver.js"></script>
-    <script src="js/blueimp-gallery.min.js"></script>
-    <script src="js/sims.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/vendor/d3.js"></script>
+    <script type="text/javascript" src="js/vendor/crossfilter.js"></script>
+    <script type="text/javascript" src="js/vendor/dc.js"></script>
+    <script type="text/javascript" src="js/vendor/fileSaver.js"></script>
+    <script type="text/javascript" src="js/vendor/blueimp-gallery.min.js"></script>
+
+    <!-- Website javascript files -->
+    <script type="text/javascript" src="js/sims.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
 
     <script>
