--- a/index.html
+++ b/index.html
@@ -500,10 +500,7 @@
     <!-- Javascript libraries -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/vendor/d3.js"></script>
-    <script type="text/javascript" src="js/vendor/crossfilter.js"></script>
-    <script type="text/javascript" src="js/vendor/dc.js"></script>
-    <script type="text/javascript" src="js/vendor/fileSaver.js"></script>
+    <script type="text/javascript" src="js/vendor/all.min.js"></script>
     <script type="text/javascript" src="js/vendor/blueimp-gallery.min.js"></script>
 
     <!-- Website javascript files -->
