Capitalise side panel to match headings on webpage

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                 <a href="#about" onclick=$("#menu-close").click();>What is SIMS?</a>
             </li>
             <li>
-                <a href="#internal-resources" onclick=$("#menu-close").click();>Internal resources</a>
+                <a href="#internal-resources" onclick=$("#menu-close").click();>Internal Resources</a>
             </li>
             <li>
-                <a href="#gallery" onclick=$("#menu-close").click();>Information product examples</a>
+                <a href="#gallery" onclick=$("#menu-close").click();>Information Product Examples</a>
             </li>
             <li>
-                <a href="#external-resources" onclick=$("#menu-close").click();>External resources</a>
+                <a href="#external-resources" onclick=$("#menu-close").click();>External Resources</a>
             </li>
             <li>
                 <a href="#toolkit" onclick=$("#menu-close").click();>Toolkit</a>
             </li>
             <li>
-                <a href="#dashboard" onclick=$("#menu-close").click();>Activations dashboard</a>
+                <a href="#dashboard" onclick=$("#menu-close").click();>Activations Dashboard</a>
             </li>
             <li>
                 <a href="#feedback" onclick=$("#menu-close").click();>Feedback</a>
