Reduced footer size

--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
     </section>
     <div class="section-spacerk"></div>
 
-    <!-- Contact  -->
-    <section id="feedback" class="feedback bg-black">
+    <!-- Footer/Feedback -->
+    <footer id="feedback" class="feedback bg-black">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -482,12 +482,7 @@
             </div>
             <!-- /.row -->
         </div>
-        <!-- /.container -->
-    </section>
-
-
-    <!-- Footer -->
-    <footer class="bg-black">
+ 
         <div class="container bg-black">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
