cleanup to remove dependencies on external service and outdated

--- a/app/resources.html
+++ b/app/resources.html
@@ -7,7 +7,7 @@ permalink: /resources/
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-10 text-center">
-        <h2 class="text-center">Resources</h2>  
+        <h2 class="text-center">Resources</h2>
         <!-- <p>Paragraph here</p> -->
         <div class="row">
           <div class="col-12 col-sm-6 col-md-4 resource-col">
@@ -109,7 +109,7 @@ permalink: /resources/
                 <h5>
                   <strong>Cash in Emergencies Toolkit</strong> <small>
                     by the International Red Cross and Red Crescent Movement for cash transfer based programming (CTP) guidance and tools.
-                    <a href="http://rcmcash.org/" target="_blank"><i class="fa fa-lg fa-external-link"></i></a>
+                    <a href="https://cash-hub.org/guidance-and-tools/cash-in-emergencies-toolkit/" target="_blank"><i class="fa fa-lg fa-external-link"></i></a>
                   </small>
                 </h5>
               </div>
@@ -118,7 +118,7 @@ permalink: /resources/
         </div>
       </div>
     </div>
-  </div> 
+  </div>
 </section>
 
 
@@ -138,7 +138,7 @@ permalink: /resources/
                                 <img class="external-card-images" src="{{ site.baseurl }}/assets/img/logos/logo-osm.png" />
                             </div>
                             <div class="resource-card-text text-left">
-                                <h5><strong>OpenStreetMap (OSM)</a></strong> <small>is an open-source equivalent of Google Maps which allows anyone to edit and extract data. SIMS uses and contributes to this data in the majority of responses. &nbsp;<a href="http://www.openstreetmap.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h5>
+                                <h5><strong>OpenStreetMap (OSM)</strong> <small>is an open-source equivalent of Google Maps which allows anyone to edit and extract data. SIMS uses and contributes to this data in the majority of responses. &nbsp;<a href="http://www.openstreetmap.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h5>
                             </div>
                         </div>
                     </div>
